name:                reflex-dom-bootstrap-components
version:             0.1.0.0
synopsis:            Some pre-built bootstrap components
description:         Please see README.md
homepage:            http://github.com/bartavelle/reflex-dom-bootstrap-components#readme
license:             BSD3
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
copyright:           Simon Marechal
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Reflex.Dom.Bootstrap
                       Reflex.Dom.Lists
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
                     , ghcjs-dom
                     , reflex-dom
                     , containers
                     , bytestring >= 0.10.6
                     , text >= 1.2.1.1
                     , aeson >= 0.9.0.1
                     , lens >= 4.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bartavelle/reflex-dom-bootstrap-components
